# Handrwriting_CNN

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-docker.txt
src/app/: app.py
src/data/: evaluate.py  load.py  train.py
src/models/: cnnmodel.py
src/saved_model/: MulticlassCNN.pth
